--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>Chair Design</h3>
-                    <p>My journey in UI/UX design focuses on creating intuitive and user-friendly digital experiences. Through careful consideration of user needs and modern design principles, I develop interfaces that are both aesthetically pleasing and highly functional.</p>
+                    <h3>Brutalism Stool</h3>
+                    <p>This stool is inspired to meet brutalism sub standards. This amateur design is a symbol of my experiment with one of the most sought out design styles which has the reputation to be minimalistic and strong. This bar stool signifies aloofness yet welcomes visitors who deem themselves some detachment from the regular hypocritically colourful society.</p>
                 </div>
             </div>
             
