--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
                     </p>
                 </div>
             </div>
+            <div class="project project-double">
+                <div class="project-images logo-scroll">
+                    <div class="scroll-container">
+                        <img src="./images/logo design.jpeg" alt="Logo Design 1">
+                        <img src="./images/logo design 2.jpeg" alt="Logo Design 2">
+                        <img src="./images/logo design 3.jpeg"Logo Design 3">
+                    </div>
+                </div>
+                <div class="project-info">
+                    <h3>Logo Design</h3>
+                    <p>Logo design for ui/ux project for a parking zone app. the logo is specifically curated to denote spotting of the next parking spot with respect to the application's brand.</p>
+                </div>
+            </div>
             <div class="project project-double chair-design-section">
                 <div class="project-images">
                     <div class="chair">
