--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="scroll-container">
                         <img src="./images/logo design.jpeg" alt="Logo Design 1">
                         <img src="./images/logo design 2.jpeg" alt="Logo Design 2">
-                        <img src="./images/logo design 3.jpeg"Logo Design 3">
+                        <img src="./images/logo design 2.jpeg" alt="Logo Design 3">
                     </div>
                 </div>
                 <div class="project-info">
