--- a/index.html
+++ b/index.html
@@ -145,12 +145,11 @@
                     </p>
                 </div>
             </div>
-            <div class="project project-double">
-                <div class="project-images logo-scroll">
-                    <div class="scroll-container">
-                        <img src="./images/logo design.jpeg" alt="Logo Design 1">
-                        <img src="./images/logo design 2.jpeg" alt="Logo Design 2">
-                    </div>
+            <div class="project project-featured">
+                <div class="project-images">
+                    <img src="./images/logo design.jpeg" alt="Project 1 - Image 1">
+                    <img src="./images/logo design 2.jpeg" alt="Project 1 - Image 2">
+                    <img src="./images/logo design 3.jpeg" alt="Project 1 - Image 3">
                 </div>
                 <div class="project-info">
                     <h3>Logo Design</h3>
